@@ -64,8 +64,9 @@ will be set automatically. If \code{title = ""}, no title is printed.}
 \item{axis.labels}{character vector with labels used as axis labels. Optional
 argument, since in most cases, axis labels are set automatically.}
 
-\item{axis.title}{character vector, used as title for the axis. If not specified, 
-a default labelling depending on the plot function and type is chosen.}
+\item{axis.title}{character vector of length one or two (depending on
+the plot function and type), used as title(s) for the x and y axis. 
+If not specified, a default labelling  is chosen.}
 
 \item{resp.label}{name of dependent variable, as string. Only 
 used if fitted model has only one predictor and \code{type = "lm"}.}
