@@ -5,6 +5,7 @@ General:
 
 Changes to functions:
 * `sjt.frq`, `sjt.xtab` and `view_df` now show notes (`note`-attribute, see `sjmisc::set_note`) of labelled data as tooltip, when mouse hovers the variable name/label, in the HTML-output.
+* `axis.title` argument for `sjp.glmer` and `sjp.lmer` can now be a vector of length one or two, to be more flexible with axes titles for the various plot types.
 
 Bug fixes:
 * `axis.lim` was not recognized for non-binomial model families and linear models slope- and effect-plot-types.
